<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MovieFlix</string>
    <string name="via_social_media">Or via social media</string>
    <string name="register">Register</string>
    <string name="todo1">TODO</string>
    <string name="sign_up_sign_in_by_google_account">Sign up/Sign In by google account</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="todo3">TODO</string>
    <string name="privacy">PRIVACY</string>
    <string name="t_c"><![CDATA[T & C]]></string>
    <string name="watch_free_movies_and_series">Watch free movies and series</string>
    <string name="todo4">TODO</string>
    <string name="no_subscription_unlimited_high_quality">No Subscription. Unlimited. High Quality</string>
    <string name="anytime_anywhere">anytime.anywhere</string>
    <string name="by_signing_in_to_movieflix_you_agree_to_our_privacy">By signing in to MovieFlix, you agree to our privacy</string>
    <string name="policy_and_terms_conditions"><![CDATA[Policy and Terms & Conditions]]></string>
    <string name="movieflix">MovieFlix</string>
    <string name="tv_shows">TV shows</string>
    <string name="series">series</string>
    <string name="search">search</string>
    <string name="recently">Recently</string>
    <string name="more">More</string>
    <string name="other_options">Other options</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet_sign_in_here">Don\'t have an account yet? sign in here!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="start">Start</string>
    <string name="forgotten">Forgotten</string>
    <string name="thrill_horror">Thrill/Horror</string>
    <string name="fantasy">fantasy</string>
    <string name="romance">Romance</string>
    <string name="historical">Historical</string>
    <string name="comedy">Comedy</string>
    <string name="action">Action</string>
    <string name="animation">Animation</string>
    <string name="slice_of_life">Slice of Life</string>
    <string name="large_text">
Soumaya guenaguen built the MovieFlix app as a Free app.
This SERVICE is provided by Soumaya guenaguen at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use,
and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy.
The Personal Information that I collect is used for providing and improving the Service.
I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,
        which is accessible at PopMovie unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service,
I may require you to provide us with certain personally identifiable information,
including but not limited to usage of email account data.
The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
Log Data

I want to inform you that whenever you use my Service,
in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data.
This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version,
the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.
These are sent to your browser from the websites that you visit and are stored on your device
        \'s internal memory.

This Service does not use these “cookies” explicitly.
However, the app may use third party code and libraries that use “cookies” to collect information and improve their services.
You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device.
 If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information.
The reason is to perform the tasks assigned to them on our behalf.
However, they are obligated not to disclose or use the information for any other purpose.

Security

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
But remember that no method of transmission over the internet,
 or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site.
Note that these external sites are not operated by me.
Therefore, I strongly advise you to review the Privacy Policy of these websites.
 I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13.
I do not knowingly collect personally identifiable information from children under 13 years of age.
In the case I discover that a child under 13 has provided me with personal information,
I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information,
please contact me so that I will be able to do necessary actions.

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.
I will notify you of any changes by posting the new Privacy Policy on this page.

This policy is effective as of 2025-01-20

Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at guenaguensoumaya13@gmail.com.
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="hamid_louai">Hamid Louai</string>
    <string name="wish_list"><![CDATA[Wish list]]></string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="groups">Groups</string>
    <string name="searchhh">Search</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="series1">Series</string>
</resources>