<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/Blue_marine">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="256dp"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="58sp" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tablayout2"
        android:layout_marginTop="0dp" />

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corners"
        android:elevation="8dp"
        app:cnb_iconSize="20dp"
        app:cnb_menuResource="@menu/bottom_navbar_chip"
        app:cnb_orientationMode="horizontal"
        app:cnb_radius="4dp"
        app:cnb_unselectedColor="@android:color/black"

        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/movies" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_shows" />
    </com.google.android.material.tabs.TabLayout>




</RelativeLayout>