<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".onbordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/iphone_11_pro_max___1">


        <Button
            android:id="@+id/button2"
            android:layout_width="310dp"
            android:layout_height="70dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            app:cornerRadius="800dip"
            app:layout_constraintBottom_toTopOf="@+id/condition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.925"
            tools:ignore="UsingOnClickInXml" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="49dp"
            android:layout_height="44dp"
            app:layout_constraintBottom_toTopOf="@+id/free"
            app:layout_constraintEnd_toStartOf="@+id/privacy"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.058"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/t_c"
            app:layout_constraintHorizontal_bias="0.821"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/t_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_c"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_free_movies_and_series"
            android:textColor="@color/white"
            android:textSize="29sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/anytime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.978" />

        <TextView
            android:id="@+id/anytime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/anytime_anywhere"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/subscription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.902" />

        <TextView
            android:id="@+id/subscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="428dp"
            android:text="@string/no_subscription_unlimited_high_quality"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy_and_terms_conditions"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agree"
            app:layout_constraintVertical_bias="0.191" />

        <TextView
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="650dp"
            android:text="@string/by_signing_in_to_movieflix_you_agree_to_our_privacy"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>