<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue_marine"
    tools:context=".ProfileActivity">


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tablayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hamid_louai"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="67dp"
        android:layout_height="60dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/name_profile"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ellipse"
        tools:ignore="ContentDescription" />

    <com.google.android.material.tabs.TabLayout

        android:id="@+id/tablayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="558dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_profile">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Wish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wish_list" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/histoire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />
    </com.google.android.material.tabs.TabLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/icons8_settings_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="555dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

    </androidx.viewpager.widget.ViewPager>

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/bottom_nav_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corners"
        android:elevation="8dp"
        app:cnb_iconSize="20dp"
        app:cnb_menuResource="@menu/bottom_navbar_chip"
        app:cnb_orientationMode="horizontal"
        app:cnb_radius="4dp"
        app:cnb_unselectedColor="@android:color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>